# document-management-api

./: .env_sample  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cicd.yml
config/: database.py  logger.py  settings.py
logger/: logging.py
migrations/versions/: 5fd4e2ffcd14_added_user_and_document_table.py
models/: document.py  user.py
repositories/: document_repository.py  user_repository.py
routers/: document_router.py  user_router.py
schemas/: document.py  user.py
scripts/: run.bat  run.sh
services/: document_service.py  jwt_service.py  user_service.py
utils/auth/: auth_handler.py  jwt_handler.py
